tree management partly finished

--- a/css/view.less
+++ b/css/view.less
@@ -34,6 +34,7 @@
 
 .highlight-compare {
   color: #fff;
-  background-color: #f0ad4e;
-  border-color: #eea236;
+  font-weight: bold;
+  background-color: #f0ad4e !important;
+  border-color: #eea236 !important;
 }
