--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -58,33 +58,25 @@ $section = sections($sectionNum, 6);
                     </h4>
                 </div>
                 <div id="controls" class=" panel-collapse collapse <?= $section[0] ? 'in' : 'closed' ?>">
-                    <div class="panel-body">
-                        <div class="btn-group btn-group-justified">
+                    <div class="panel-body controls">
+                        <div class="btn-group">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default" title="<?= $l10n['back_to_start'] ?>"
                                         id="btn-reset">
                                     <span class="glyphicon glyphicon-fast-backward"></span>
                                 </button>
-                            </div>
-                            <div class="btn-group">
                                 <button type="button" class="btn btn-default" title="<?= $l10n['step_back'] ?>"
                                         id="btn-back">
                                     <span class="glyphicon glyphicon-step-backward"></span>
                                 </button>
-                            </div>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default" title="<?= $l10n['play'] ?>" id="btn-play"
-                                        data-toggle="button">
+                                <button type="button" class="btn btn-default" title="<?= $l10n['play'] ?>"
+                                        id="btn-play">
                                     <span class="glyphicon glyphicon-play" id="img-play"></span>
                                 </button>
-                            </div>
-                            <div class="btn-group">
                                 <button type="button" class="btn btn-default" title="<?= $l10n['step_forward'] ?>"
                                         id="btn-step">
                                     <span class="glyphicon glyphicon-step-forward"></span>
                                 </button>
-                            </div>
-                            <div class="btn-group">
                                 <button type="button" class="btn btn-default" title="<?= $l10n['forward_to_end'] ?>"
                                         id="btn-finish">
                                     <span class="glyphicon glyphicon-fast-forward"></span>
