added index page and user page

--- a/css/common.less
+++ b/css/common.less
@@ -1,3 +1,19 @@
 .panel-heading {
   cursor: pointer;
 }
+
+.algorithms {
+  .name {
+    font-weight: bold;
+    font-variant: small-caps;
+  }
+
+  .properties {
+    font-size: small;
+    color: #8d8d8d;
+  }
+
+  .description {
+    font-size: small;
+  }
+}
