--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -10,7 +10,7 @@ $aid = $_GET['aid'];
 // get algorithm details from database
 require_once BASEDIR . "includes/dataModel.php";
 $_model = new DataModel();
-$_algo = $_model->fetchAlgorithmByAID($aid);
+$_algo = $_model->fetchAlgorithm($aid);
 $_model->close();
 
 // check authentication
@@ -36,6 +36,9 @@ $tree = new Tree(json_decode($_algo->tree));
 require_once BASEDIR . "includes/viewHelper.php";
 $sectionNum = isset($_GET['section']) ? $_GET['section'] : SECTIONS_EDIT;
 $section = sections($sectionNum, 3);
+
+// use algorithm header
+require_once BASEDIR . "partials/headers/algorithmHeader.phtml";
 
 ?>
 <!-- HEADER -->
