--- a/partials/home.phtml
+++ b/partials/home.phtml
@@ -4,7 +4,7 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !');
 // ask database for latest algorithms
 require_once BASEDIR . "includes/dataModel.php";
 $_model = new DataModel();
-$algos = $_model->fetchLatestAlgorithms(NUMBER_OF_LATEST_ALGORITHMS);
+$algorithms = $_model->fetchLatestAlgorithms(NUMBER_OF_LATEST_ALGORITHMS);
 $_model->close();
 
 require_once BASEDIR . "includes/viewHelper.php";
@@ -23,34 +23,35 @@ require_once BASEDIR . "includes/viewHelper.php";
         </p>
     </div>
 
-<?php if (sizeof($algos)): ?>
-    <div class="page-header">
-        <h1><?= $l10n['latest_algos'] ?></h1>
-    </div>
-
+<?php if (sizeof($algorithms)): ?>
     <!-- CONTENT -->
-    <table id="latest-algorithms" class="table table-striped table-hover">
-    <?php foreach ($algos as $algo):
-        $link = url(['action' => 'view', 'aid' => $algo['aid']]);
-        ?>
+    <table class="table table-striped table-hover algorithms">
+        <thead>
         <tr>
-            <td>
-                <span class="name">
-                    <a href="<?= $link ?>"><?= $algo['name'] ?></a>
-                </span>
-                <?php if ($algo['age'] <= MAX_MINUTES_FOR_LABEL): ?>
-                    <span class="label label-default"><?= $l10n['label_new'] ?></span>
-                <?php endif ?>
-                <span class="properties">
-                    (<?= sprintf($l10n['created_note'], getTimeFrame($algo['age']), $algo['username']) ?>)
-                </span>
-                <hr class="separator"/>
-                <span class="description"><?= skipDescription($algo['description']) ?></span>
-                <span class="link">
-                    (<a href="<?= $link ?>">&rarr; <?= $l10n['read_more'] ?></a>)
-                </span>
-            </td>
+            <th><?= $l10n['latest_algos'] ?></th>
         </tr>
-    <?php endforeach ?>
+        </thead>
+        <tbody>
+        <?php foreach ($algorithms as $algorithm):
+            $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+            $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+            ?>
+            <tr>
+                <td>
+                    <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
+                        <span class="label label-default"><?= $l10n['label_new'] ?></span>
+                    <?php endif ?>
+                    <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                <span class="properties">
+                    (<?= sprintf($l10n['created_note'], getTimeFrame($algorithm['age']),
+                        '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                </span>
+                    <?php if (!empty($algorithm['description'])): ?>
+                        <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                    <?php endif ?>
+                </td>
+            </tr>
+        <?php endforeach ?>
+        </tbody>
     </table>
 <?php endif ?>
