--- a/partials/index.phtml
+++ b/partials/index.phtml
@@ -1,6 +1,14 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
+require_once BASEDIR . "includes/viewHelper.php";
 
+// ask database for latest algorithms
+require_once BASEDIR . "includes/dataModel.php";
+$_model = new DataModel();
+$latestAlgorithms = $_model->fetchLatestAlgorithms(MAX_NUMBER_OF_ENTRIES);
+$lastChanges = $_model->fetchModifiedAlgorithms(MAX_NUMBER_OF_ENTRIES);
+$diligentUsers = $_model->fetchUsersWithMostAlgorithms(MAX_NUMBER_OF_ENTRIES);
+$_model->close();
 ?>
 <!-- HEADER -->
 <div class="page-header">
@@ -9,4 +17,88 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !');
     </h1>
 </div>
 <!-- CONTENT -->
-<!-- TODO: index page! -->
+<div class="col-md-4">
+    <!-- Latest algorithms -->
+    <table class="table table-striped table-hover algorithms">
+        <thead>
+        <tr>
+            <th><?= $l10n['latest_algos'] ?></th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php foreach ($latestAlgorithms as $algorithm):
+            $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+            $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+            ?>
+            <tr>
+                <td>
+                    <?php if ($algorithm['age'] <= MAX_MINUTES_FOR_LABEL): ?>
+                        <span class="label label-default"><?= $l10n['label_new'] ?></span>
+                    <?php endif ?>
+                    <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                    <span class="properties">
+                        (<?= sprintf($l10n['created_note'], getTimeFrame($algorithm['age']),
+                            '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                    </span>
+                    <?php if (!empty($algorithm['description'])): ?>
+                        <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                    <?php endif ?>
+                </td>
+            </tr>
+        <?php endforeach ?>
+        </tbody>
+    </table>
+</div>
+<div class="col-md-4">
+    <!-- Last changes -->
+    <table class="table table-striped table-hover algorithms">
+        <thead>
+        <tr>
+            <th><?= $l10n['last_changes'] ?></th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php foreach ($lastChanges as $algorithm):
+            $linkAlgorithm = url(['action' => 'view', 'aid' => $algorithm['aid']]);
+            $linkUser = url(['action' => 'user', 'uid' => $algorithm['uid']]);
+            ?>
+            <tr>
+                <td>
+                    <span class="name"><a href="<?= $linkAlgorithm ?>"><?= $algorithm['name'] ?></a></span>
+                    <span class="properties">
+                        (<?= sprintf($l10n['modified_note'], getTimeFrame($algorithm['modified']),
+                            '<a href="' . $linkUser . '">' . $algorithm['username']) . '</a>' ?>)
+                    </span>
+                    <?php if (!empty($algorithm['description'])): ?>
+                        <span class="description"><?= skipDescription($algorithm['description']) ?></span>
+                    <?php endif ?>
+                </td>
+            </tr>
+        <?php endforeach ?>
+        </tbody>
+    </table>
+</div>
+<div class="col-md-4">
+    <!-- Users with most algorithms -->
+    <table class="table table-striped table-hover algorithms">
+        <thead>
+        <tr>
+            <th><?= $l10n['diligent_users'] ?></th>
+        </tr>
+        </thead>
+        <tbody>
+        <?php foreach ($diligentUsers as $user):
+            $linkUser = url(['action' => 'user', 'uid' => $user['uid']]);
+            ?>
+            <tr>
+                <td>
+                    <span class="name"><a href="<?= $linkUser ?>"><?= $user['username'] ?></a></span>
+                    <span class="properties">
+                        (<?= sprintf($l10n['user_created_note'], $user['algorithm_count']) ?>)
+                    </span>
+                </td>
+            </tr>
+        <?php endforeach ?>
+        </tbody>
+    </table>
+</div>
