--- a/css/algorithm.less
+++ b/css/algorithm.less
@@ -22,7 +22,7 @@
 
       table {
         border-collapse: separate;
-        padding: 1px;
+        padding: 1px 0 1px 1px;
         text-align: left;
       }
 
